@@ -275,7 +275,13 @@ specifier|final
 name|PayloadFunction
 name|function
 decl_stmt|;
-comment|/**    * Creates a new PayloadScoreQuery    * @param wrappedQuery the query to wrap    * @param function a PayloadFunction to use to modify the scores    */
+DECL|field|includeSpanScore
+specifier|private
+specifier|final
+name|boolean
+name|includeSpanScore
+decl_stmt|;
+comment|/**    * Creates a new PayloadScoreQuery    * @param wrappedQuery the query to wrap    * @param function a PayloadFunction to use to modify the scores    * @param includeSpanScore include both span score and payload score in the scoring algorithm    */
 DECL|method|PayloadScoreQuery
 specifier|public
 name|PayloadScoreQuery
@@ -285,6 +291,9 @@ name|wrappedQuery
 parameter_list|,
 name|PayloadFunction
 name|function
+parameter_list|,
+name|boolean
+name|includeSpanScore
 parameter_list|)
 block|{
 name|this
@@ -298,6 +307,34 @@ operator|.
 name|function
 operator|=
 name|function
+expr_stmt|;
+name|this
+operator|.
+name|includeSpanScore
+operator|=
+name|includeSpanScore
+expr_stmt|;
+block|}
+comment|/**    * Creates a new PayloadScoreQuery that includes the underlying span scores    * @param wrappedQuery the query to wrap    * @param function a PayloadFunction to use to modify the scores    */
+DECL|method|PayloadScoreQuery
+specifier|public
+name|PayloadScoreQuery
+parameter_list|(
+name|SpanQuery
+name|wrappedQuery
+parameter_list|,
+name|PayloadFunction
+name|function
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|wrappedQuery
+argument_list|,
+name|function
+argument_list|,
+literal|true
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -819,6 +856,25 @@ argument_list|(
 literal|"No match"
 argument_list|)
 return|;
+name|scorer
+operator|.
+name|freq
+argument_list|()
+expr_stmt|;
+comment|// force freq calculation
+name|Explanation
+name|payloadExpl
+init|=
+name|scorer
+operator|.
+name|getPayloadExplanation
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|includeSpanScore
+condition|)
+block|{
 name|SpanWeight
 name|innerWeight
 init|=
@@ -846,20 +902,6 @@ argument_list|,
 name|doc
 argument_list|)
 decl_stmt|;
-name|scorer
-operator|.
-name|freq
-argument_list|()
-expr_stmt|;
-comment|// force freq calculation
-name|Explanation
-name|payloadExpl
-init|=
-name|scorer
-operator|.
-name|getPayloadExplanation
-argument_list|()
-decl_stmt|;
 return|return
 name|Explanation
 operator|.
@@ -876,6 +918,13 @@ name|innerExpl
 argument_list|,
 name|payloadExpl
 argument_list|)
+return|;
+block|}
+return|return
+name|scorer
+operator|.
+name|getPayloadExplanation
+argument_list|()
 return|;
 block|}
 block|}
@@ -1122,10 +1171,18 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|includeSpanScore
+condition|)
 return|return
 name|getSpanScore
 argument_list|()
 operator|*
+name|getPayloadScore
+argument_list|()
+return|;
+return|return
 name|getPayloadScore
 argument_list|()
 return|;
