@@ -245,6 +245,19 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|QueryUtils
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|TermStatistics
 import|;
 end_import
@@ -461,6 +474,46 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|checkQuery
+argument_list|(
+name|query
+argument_list|,
+name|function
+argument_list|,
+literal|true
+argument_list|,
+name|expectedDocs
+argument_list|,
+name|expectedScores
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|checkQuery
+specifier|private
+specifier|static
+name|void
+name|checkQuery
+parameter_list|(
+name|SpanQuery
+name|query
+parameter_list|,
+name|PayloadFunction
+name|function
+parameter_list|,
+name|boolean
+name|includeSpanScore
+parameter_list|,
+name|int
+index|[]
+name|expectedDocs
+parameter_list|,
+name|float
+index|[]
+name|expectedScores
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|assertTrue
 argument_list|(
 literal|"Expected docs and scores arrays must be the same length!"
@@ -483,6 +536,8 @@ argument_list|(
 name|query
 argument_list|,
 name|function
+argument_list|,
+name|includeSpanScore
 argument_list|)
 decl_stmt|;
 name|TopDocs
@@ -623,6 +678,18 @@ name|expectedDocs
 operator|.
 name|length
 index|]
+argument_list|)
+expr_stmt|;
+name|QueryUtils
+operator|.
+name|check
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|psq
+argument_list|,
+name|searcher
 argument_list|)
 expr_stmt|;
 block|}
@@ -1055,6 +1122,18 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+comment|// check includeSpanScore makes a difference here
+name|searcher
+operator|.
+name|setSimilarity
+argument_list|(
+operator|new
+name|MultiplyingSimilarity
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|checkQuery
 argument_list|(
 name|q
@@ -1062,6 +1141,89 @@ argument_list|,
 operator|new
 name|MaxPayloadFunction
 argument_list|()
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|122
+block|,
+literal|222
+block|}
+argument_list|,
+operator|new
+name|float
+index|[]
+block|{
+literal|41.802513122558594f
+block|,
+literal|34.13160705566406f
+block|}
+argument_list|)
+expr_stmt|;
+name|checkQuery
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|MinPayloadFunction
+argument_list|()
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|222
+block|,
+literal|122
+block|}
+argument_list|,
+operator|new
+name|float
+index|[]
+block|{
+literal|34.13160705566406f
+block|,
+literal|20.901256561279297f
+block|}
+argument_list|)
+expr_stmt|;
+name|checkQuery
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|AveragePayloadFunction
+argument_list|()
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|122
+block|,
+literal|222
+block|}
+argument_list|,
+operator|new
+name|float
+index|[]
+block|{
+literal|38.3189697265625f
+block|,
+literal|34.13160705566406f
+block|}
+argument_list|)
+expr_stmt|;
+name|checkQuery
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|MaxPayloadFunction
+argument_list|()
+argument_list|,
+literal|false
 argument_list|,
 operator|new
 name|int
@@ -1090,6 +1252,8 @@ operator|new
 name|MinPayloadFunction
 argument_list|()
 argument_list|,
+literal|false
+argument_list|,
 operator|new
 name|int
 index|[]
@@ -1117,6 +1281,8 @@ operator|new
 name|AveragePayloadFunction
 argument_list|()
 argument_list|,
+literal|false
+argument_list|,
 operator|new
 name|int
 index|[]
@@ -1136,6 +1302,17 @@ literal|3.666666f
 block|}
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|searcher
+operator|.
+name|setSimilarity
+argument_list|(
+name|similarity
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
@@ -1743,12 +1920,52 @@ operator|=
 literal|null
 expr_stmt|;
 block|}
+DECL|class|MultiplyingSimilarity
+specifier|static
+class|class
+name|MultiplyingSimilarity
+extends|extends
+name|ClassicSimilarity
+block|{
+annotation|@
+name|Override
+DECL|method|scorePayload
+specifier|public
+name|float
+name|scorePayload
+parameter_list|(
+name|int
+name|docId
+parameter_list|,
+name|int
+name|start
+parameter_list|,
+name|int
+name|end
+parameter_list|,
+name|BytesRef
+name|payload
+parameter_list|)
+block|{
+comment|//we know it is size 4 here, so ignore the offset/length
+return|return
+name|payload
+operator|.
+name|bytes
+index|[
+name|payload
+operator|.
+name|offset
+index|]
+return|;
+block|}
+block|}
 DECL|class|BoostingSimilarity
 specifier|static
 class|class
 name|BoostingSimilarity
 extends|extends
-name|ClassicSimilarity
+name|MultiplyingSimilarity
 block|{
 annotation|@
 name|Override
@@ -1781,38 +1998,6 @@ parameter_list|)
 block|{
 return|return
 literal|1.0f
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|scorePayload
-specifier|public
-name|float
-name|scorePayload
-parameter_list|(
-name|int
-name|docId
-parameter_list|,
-name|int
-name|start
-parameter_list|,
-name|int
-name|end
-parameter_list|,
-name|BytesRef
-name|payload
-parameter_list|)
-block|{
-comment|//we know it is size 4 here, so ignore the offset/length
-return|return
-name|payload
-operator|.
-name|bytes
-index|[
-name|payload
-operator|.
-name|offset
-index|]
 return|;
 block|}
 comment|//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
